[package]
name = "forklift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
comat = "0.1.3"
csv = "1.3.0"
fimg = { version = "0.4.42", features = ["term"] }
flate2 = "1.0.30"
indicatif = "0.17.8"
libc = "0.2.154"
nohash = "0.2.0"
raad = "0.1.1"
recursive = "0.1.1"
serde = "1.0.200"
serde_derive = "1.0.200"
tar = "0.4.40"
ureq = "2.9.7"
