[package]
name = "forklift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82" 
comat = "0.1.3"
csv = { version = "1.3.0", default-features = false }
flate2 = { version = "1.0.30"} 
indicatif = { version = "0.17.8", default-features = false }
nohash = "0.2.0"
raad = "0.1.1"
recursive = { version = "0.1.1", default-features = false }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
serde_derive = { version = "1.0.200", default-features = false }
tar = { version = "0.4.40", default-features = false }
ureq = { version = "2.9.7", default-features = false, features = ["http-crate"] }
