[package]
name = "forklift"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82" 
chrono = { version = "0.4.38", default-features = false, features=["serde"]}
clap = { version = "4.5.4", features = ["derive"]}
csv = { version = "1.3.0", default-features = false }
flate2 = { version = "1.0.30"} 
kuh = { path = "../kuh"}
ron = "0.8.1"
semver = "1.0.23"
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
serde_derive = { version = "1.0.200", default-features = false }
sicht = { path = "../sicht" }
# sicht = { git = "https://github.com/Dylan-DPC/sicht" }
tar = { version = "0.4.40", default-features = false }
